--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,20 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+      <script src="http://localhost:9990/auth/js/keycloak.js"></script>
+    <script src="keycloak.js"></script>
+    <script>
+        var keycloak = Keycloak({
+          url: 'http://localhost:9990/auth',
+          realm: 'genny1',
+          clientId: 'genny1'});
+
+        keycloak.init({ onLoad: 'login-required' }).success(function(authenticated) {
+            alert(authenticated ? 'authenticated' : 'not authenticated');
+        }).error(function() {
+            alert('failed to initialize');
+        });
+    </script>
 </head>
 
 <body>
