added keycloak.json file

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-   <script src="http://localhost:8080/auth/js/keycloak.js"></script>
+   <!--<script src="http://localhost:8080/auth/js/keycloak.js"></script>-->
 </head>
 
 <body>
   <div id="app"></div>
-  <script>
+  <!--<script>
     var keycloak = Keycloak({
       url: 'http://localhost:8080/auth',
       realm: 'genny2',
@@ -27,8 +27,8 @@
     }).error(function () {
       alert('failed to initialize');
     });
-
-  </script>
+    console.log(keycloak);
+  </script>-->
 </body>
 
 </html>
