testing github integration

--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
   <div id="app"></div>
   <!--<script>
     var keycloak = Keycloak({
-      url: 'http://localhost:8080/auth',
-      realm: 'genny2',
-      clientId: 'genny2'
+      url: 'http://bouncer.outcome-hub.com/auth',
+      realm: 'genny',
+      clientId: 'layout'
     });
 
     keycloak.init({ onLoad: 'login-required' }).success(function (authenticated) {
