Changed bouncer utl protocol to https

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <div id="app"></div>
   <!--<script>
     var keycloak = Keycloak({
-      url: 'http://bouncer.outcome-hub.com/auth',
+      url: 'https://bouncer.outcome-hub.com/auth',
       realm: 'genny',
       clientId: 'layout'
     });
