--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Genny Layout </title>
+<title> Genny</title>
 <!-- SEO Ultimate (http://www.seodesignsolutions.com/wordpress-seo/) -->
 <meta name="description" content="outcome-hub genny layout" />
 <meta property="og:type" content="web applicaiont" />
@@ -62,7 +62,7 @@
   <div class="container" id="load">
     <div class="loader">
     </div>
-    <div id="title" >Genny Layout </div>
+    <div id="title" >Loading </div>
   </div>
 
   <div id="app"></div>
