added genny.properties.js file

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
   <div class="container" id="load">
     <div class="loader">
     </div>
-    <div id="title" >Loading </div>
+    <div id="title" style="text-align: center">Loading </div>
   </div>
 
   <div id="app"></div>
